--- a/calc_basic/src/App.css
+++ b/calc_basic/src/App.css
@@ -1,38 +1,27 @@
-.App {
+.calculator-body {
   text-align: center;
+  background-color: rgb(104, 173, 167);
+  margin-left: 250px;
+  margin-right: 250px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.result {
+  background-color: rgb(223, 223, 182);
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.button {
+  padding: 10px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.button:hover {
+  background-color: rgb(98, 163, 158);
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  color: azure;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+  background-color: rgb(86, 92, 207);
+  margin: 10%;
 }
